--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
     "require": {
         "php": ">=7.2",
         "graylog2/gelf-php": "^1.5",
-        "illuminate/contracts": "^6.0|^7.0",
-        "illuminate/log": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0"
+        "illuminate/contracts": "^6.0|^7.0|^8.0",
+        "illuminate/log": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "monolog/monolog": "^1.24|^2.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "^1.3",
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench" : "^4.0|^5.0",
+        "orchestra/testbench" : "^4.0|^5.0|^6.0",
         "squizlabs/php_codesniffer": "^3.3.2"
     },
     "autoload": {
