Drop support for php 7.2
Ref #33324

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": "^7.3",
         "graylog2/gelf-php": "^1.7",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
         "illuminate/log": "^6.0|^7.0|^8.0",
