--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "graylog2/gelf-php": "^1.7",
-        "illuminate/contracts": "^6.10|^7.0|^8.0",
-        "illuminate/log": "^6.10|^7.0|^8.0",
-        "illuminate/support": "^6.10|^7.0|^8.0",
+        "illuminate/contracts": "^8.0",
+        "illuminate/log": "^8.0",
+        "illuminate/support": "^8.0",
         "monolog/monolog": "^1.24|^2.0"
     },
     "require-dev": {
         "exolnet/phpcs-config": "^2.0",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^4.0|^5.0|^6.0",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.3.3",
         "squizlabs/php_codesniffer": "^3.6"
     },
