--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,22 +10,32 @@ jobs:
       fail-fast: true
       matrix:
         php: [7.3, 7.4, 8.0, 8.1]
-        laravel: [8.*]
+        laravel: [8.*, 9.*]
+        guzzle: [6.*, 7.*]
         dependency-version: [prefer-lowest, prefer-stable]
         exclude:
           - php: 8.1
             laravel: 8.*
             dependency-version: prefer-lowest
+          - php: 7.3
+            laravel: 9.*
+          - php: 7.4
+            laravel: 9.*
+          - guzzle: 6.*
+            laravel: 9.*
         include:
           - laravel: 8.*
             testbench: 6.*
+          - laravel: 9.*
+            testbench: 7.*
           #Testing php 8.1 with Laravel 8.74 as its lowest
           - php: 8.1
             laravel: ^8.74
             dependency-version: prefer-lowest
             testbench: 6.*
+            guzzle: 6.*
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - G${{ matrix.guzzle }} - ${{ matrix.dependency-version }}
 
     steps:
       - name: Checkout code
@@ -46,7 +56,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "guzzlehttp/guzzle:${{ matrix.guzzle }}" --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
 
       - name: Execute tests
