--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,6 @@ jobs:
       matrix:
         php: [7.3, 7.4, 8.0, 8.1]
         laravel: [8.*, 9.*]
-        guzzle: [6.*, 7.*]
         dependency-version: [prefer-lowest, prefer-stable]
         exclude:
           - php: 8.1
@@ -20,8 +19,6 @@ jobs:
           - php: 7.3
             laravel: 9.*
           - php: 7.4
-            laravel: 9.*
-          - guzzle: 6.*
             laravel: 9.*
         include:
           - laravel: 8.*
@@ -33,9 +30,8 @@ jobs:
             laravel: ^8.74
             dependency-version: prefer-lowest
             testbench: 6.*
-            guzzle: 6.*
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - G${{ matrix.guzzle }} - ${{ matrix.dependency-version }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
     steps:
       - name: Checkout code
@@ -56,7 +52,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "guzzlehttp/guzzle:${{ matrix.guzzle }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
 
       - name: Execute tests
