--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "illuminate/contracts": "^9.0|^10.0",
         "illuminate/log": "^9.0|^10.0",
         "illuminate/support": "^9.0|^10.0",
-        "monolog/monolog": "^1.24|^2.0"
+        "monolog/monolog": "^1.24|^2.0|^3.3.0"
     },
     "require-dev": {
         "exolnet/phpcs-config": "^2.0",
