test: add a full e2e test to log a message

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,8 @@
         "monolog/monolog": "^2.0|^3.3"
     },
     "require-dev": {
+        "ext-sockets": "*",
+        "ext-zlib": "*",
         "exolnet/phpcs-config": "^2.0",
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4",
