--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "graylog2/gelf-php": "^1.7",
-        "illuminate/contracts": "^10.0|^11.0|^12.0",
-        "illuminate/log": "^10.0|^11.0|^12.0",
-        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/contracts": "^11.0|^12.0",
+        "illuminate/log": "^11.0|^12.0",
+        "illuminate/support": "^11.0|^12.0",
         "monolog/monolog": "^2.0|^3.3"
     },
     "require-dev": {
@@ -36,8 +36,8 @@
         "exolnet/phpcs-config": "^2.0",
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "phpunit/phpunit": "^10.5|^11.5.3",
+        "orchestra/testbench": "^9.0|^10.0",
+        "phpunit/phpunit": "^11.5.3",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
